apps/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: media
  labels:
    app: jellyfin
spec:
  type: NodePort
  selector:
    app: jellyfin
  ports:
  - name: webui
    port: 8096
    targetPort: 8096
    nodePort: 30096
